--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.0",
     "react-dom": "^16.7.0",
+    "react-smart-data-table": "^0.6.7",
     "react-table": "^6.8.6",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
